--- a/bundles/org.opensmarthouse.ui/web/src/css/app.styl
+++ b/bundles/org.opensmarthouse.ui/web/src/css/app.styl
@@ -14,9 +14,14 @@ html
   --f7-list-item-header-line-height 1.3
   --f7-label-line-height 1.3
   --f7-list-item-after-line-height 1.3
-  // seems to reduce the problems with the mouse wheel not working on Chrome
-  // .smart-select-popup.popup.modal-in, .smart-select-popup.popup.modal-out
-  //   transition-duration 1ms
+
+  // disable all searchbar backdrops on desktop devices
+  .searchbar-backdrop
+    display none
+
+.no-page-transitions
+  .smart-select-popup.popup.modal-in, .smart-select-popup.popup.modal-out
+    transition-duration 1ms
 
 /* Custom color theme properties */
 :root
@@ -73,8 +78,11 @@ html
 
   --f7-navbar-subtitle-text-color rgba(255,255,255,0.85)
   --f7-navbar-border-color transparent
-  --f7-searchbar-input-bg-color #fff
   --f7-sheet-border-color transparent
+  .searchbar
+    --f7-searchbar-input-bg-color #fff
+    input
+      --f7-searchbar-input-text-color #000
 
   .navbar-large-transparent
     --f7-navbar-large-title-text-color #000
